feat: add support for objec input and output